<?xml version="1.0"?>
<package format="2">
  <name>ais</name>
  <version>0.0.0</version>
  <description>The ais package</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>marine_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
</package>
