<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>marine_ais_msgs</name>
    <version>0.0.0</version>
    <description>
    This package defines message types for use with marine Automatic Identification Systems.
    </description>
    <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>
    <license>BSD</license>
    
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    
    <depend>geographic_msgs</depend>
    <depend>std_msgs</depend>

    <exec_depend>rosidl_default_runtime</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
    

</package>
