<?xml version="1.0"?>
<package format="2">
  <name>marine_ais_tools</name>
  <version>0.0.0</version>
  <description>ROS nodes for decoding AIS data and publish to ROS messages</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>marine_ais_msgs</depend>
  <depend>nmea_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
</package>
